# rush-patch

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dev/: catalog-dev.sqlite
src-tauri/sql/migrations/: 0001_catalog.sql  0002_planning.sql  0003_glossary_terms.sql  0004_grouped_orphan_planning.sql  0005_planning_batch_metadata.sql  0006_batching_strategy_metadata.sql
src-tauri/src/: app_state.rs  applier.rs  catalog.rs  commands.rs  domain.rs  extractor_js.rs  extractor_json.rs  js_strings.rs  json_pointer.rs  lib.rs  main.rs  openai_responses.rs  parallel.rs  patch_storage.rs  scanner.rs  settings.rs  text.rs  text_io.rs  translation_io.rs  translator.rs  validator.rs  workflow_events.rs
src-tauri/src/catalog_db/: migrate.rs  mod.rs  models.rs  persist.rs  planning.rs  pool.rs  queries.rs  reuse.rs  terms.rs
src-tauri/src/extractor_js/: order_tests.rs
src-tauri/src/extractor_json/: event_context.rs  events.rs  order_tests.rs  tests.rs
src-tauri/src/prompting/: grouped_schema.rs  mod.rs  response.rs  schema.rs  system.rs  tests.rs  tokens.rs
src-tauri/src/terminology/: candidates.rs  matching.rs  mod.rs
src-tauri/src/translator/: batch_segments.rs  batch_strategy.rs  batching.rs  batching_regression_tests.rs  estimate.rs  estimate_tests.rs  main_translate.rs  orphan_grouping.rs  planned_batch.rs  request.rs  responses_client.rs  responses_sse.rs  run.rs  segment_groups.rs  (+3 more)
(+54 files in other folders)
