[package]
name = "rush-patch"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
default-run = "rush-patch"

[package.metadata.tauri-winres]
FileDescription = "Rush Patch desktop shell"
ProductName = "Rush Patch"

[build-dependencies]
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
async-openai = { version = "0.41.0", features = ["byot", "chat-completion", "responses"] }
encoding_rs = "0.8.35"
futures = "0.3.32"
jsonptr = "0.7.1"
keyring = "4.0.1"
keyring-core = "1.0.0"
oxc_allocator = "0.136.0"
oxc_parser = "0.136.0"
oxc_span = "0.136.0"
rayon = "1.12.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
tauri = { version = "=2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
thiserror = "2.0.18"
tiktoken-rs = "0.12.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
